--- a/tetris.html
+++ b/tetris.html
@@ -74,6 +74,12 @@
     #startReloadButton{
         width: 100%;
         margin: 2px;
+        background-color: black;
+        color: white;
+        border-radius: 5px; 
+    }
+    #startReloadButton:hover{
+        background-color: rgba(0, 0, 0, 0.404);
     }
     .sides{
         width: 50%;
@@ -627,6 +633,7 @@ function startGame(){
     }else{
         play = false;
         document.getElementById('startReloadButton').innerHTML = 'Start';
+        document.getElementById('backgroundDisplay').innerHTML = '';
         clearInterval(runGame);
         for(let i = 0; i < cells.length; i++){
             cells[i] = 0;
